--- a/css/main.css
+++ b/css/main.css
@@ -1,51 +1,477 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    background-color:rgb(20, 38, 39) ;
+    /* background-color:rgb(20, 38, 39) ; */
+    background-color: black;
     position: relative;
 }
 
 
-/* Inicio separadores </> */
+/* Inicio 1_separadores </> */
     .mayorQue1, .mayorQue2, .mayorQue3 {
         text-align: center;
         font-size: 2rem;
         color: white;
-        padding: 9rem;
+        padding: 4rem;
     }
     .mayorQue1 {
-        background: linear-gradient(rgb(20, 38, 39),black);
-        margin-bottom: 0;
+        background: linear-gradient(rgba(20, 38, 39, 0.926),black);
     }
     .mayorQue2 {
         background-color: black;
-        margin-bottom: 0;
-
     }
     .mayorQue3 {
-        background: linear-gradient(black,rgb(20, 38, 39));
+        background: linear-gradient(black,rgba(20, 38, 39, 0.926));
+        margin-bottom: 0;
     }
-/* Fin separadores </> */
-
-
-
-
-/* Inicia Navbar custom */
-    .navMenuAlineacion {
-        text-align: right;
-        justify-content: end;
+    .mayorQue1:hover, .mayorQue2:hover, .mayorQue3:hover {
+        color: rgb(181, 41, 41);
+        font-style: italic;
     }
+/* Fin 1_separadores </> */
 
-    .navBarCustom {
-        background-color:rgb(20, 38, 39);
-        font-size: 1.3rem;
-    }
+
+
+
+/* Inicia 2_Navbar_custom */
     .navbar {
-        --bs-navbar-padding-y:0;
-        margin-top: 2rem;
+        /* --bs-navbar-padding-y:0; */
+        justify-content: end;
+        background-color: black;
+        --bs-navbar-nav-link-padding-x: 1.5rem;
     }
-    .navbar-brand {
-        font-size: 2rem;
+    .navBarMenu {
+        text-align: end;
+        font-family: 'Urbanist', sans-serif;  
+        padding-right: 1rem;
+        gap: 4rem;
     }
-/* Fin Navbar custom */
+    .nav-link{
+        color: white;
+    }
+    .nav-link:hover{
+        color: rgb(181, 41, 41);
+        font-weight: bold;
+    }
+    .actual {
+        font-weight: bold;
+        
+    }
+    .navbar-toggler {
+        background-color: rgba(128, 128, 128, 0.653);
+    }
+/* Fin 2_Navbar_custom */
+
+
+
+
+
+
+
+/* Inicia 3_auto_presentacion */
+.presentacion {
+    max-width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    gap: 3rem;    
+    padding-bottom: 4rem;
+}
+.presentacionTexto {
+    color: rgb(215, 215, 215);
+    flex: 1;
+    padding-inline: 1rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-left: 3rem;
+}
+.presentacionImagen {
+    flex: 1;
+    /* filter: blur(6px); */
+}
+.jmga {
+    width: 100%;
+}
+
+.presentacionTextoUp{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: 'Urbanist', sans-serif;
+    
+}
+.presentacionTextoRol {
+    font-size: 1.5rem;
+    font-family: 'Urbanist', sans-serif;
+    color: red;
+    margin: 0;
+    animation-name: turnOn;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-duration: 4s;
+}
+@keyframes turnOn {
+    0% {
+        opacity: 0;
+    }
+    50%{
+        color: rgb(138, 9, 0);
+    }
+    100%{
+        opacity: 1;
+        color: red;        
+    }
+}
+
+.presentacionTextoNombre {
+    font-size: 3rem;
+    font-weight: 600;
+    margin: 0;
+}
+.presentacionTextoResumen {
+    font-size: 0.8rem;
+    margin-bottom: 2rem;
+}
+.presentacionTextoContact {
+    text-decoration: none;
+    /* background-color: rgb(81, 132, 81); */
+    background-color: rgb(181, 41, 41);
+    color: white;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+}
+
+.presentacionTextoDown{
+    font-size: 0.8rem;
+    display: flex;
+    background-color: red;
+    justify-content: space-between;
+    gap: 4px;
+}
+.presentacionTextoDown p {
+    background-color: black;
+    margin-bottom: 0;
+    padding-inline: 1rem;
+    margin-inline: 0;
+    flex: 1;
+}
+.presentacionTextoDown a {
+    color: white;
+    text-decoration: none;
+}
+/* Fin 3_auto_presentacion */
+
+
+
+
+
+
+
+
+
+
+
+/* Inicia 4_skills */
+.skills {
+    background-color: rgba(20, 38, 39, 0.926); 
+    color: white;
+    font-family: 'Urbanist', sans-serif;
+    padding-block: 4rem; 
+}
+.skillsTitle {
+    font-weight: 600;
+    font-size: 1.5rem;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding-inline: 1.5rem;
+    margin-bottom: 1rem;
+}
+.skillsCards {
+    display: flex;
+    gap: 1rem;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding-inline: 1.5rem;    
+}
+.skillsCard {
+    padding: 2.5rem 1.5rem;
+    flex: 1;
+    margin-bottom: 1rem;
+    
+}
+.skillsCardIconRed {
+    font-size: 2rem;
+    color: red;
+}
+.skillsCardIconWhite {
+    font-size: 2rem;
+}
+.skillsCardTitle {
+    font-weight: bold;
+    font-size: 1.3rem;
+}
+.skillsCardRed {
+    /* background-color: rgb(255, 35, 35);     */
+    background: linear-gradient(rgb(247, 50, 50),rgba(157, 0, 0, 0.926));
+}
+.skillsCardBlack {
+    background: linear-gradient(rgb(35, 61, 62),rgb(10, 24, 25));
+}
+/* Fin 4_skills */
+
+
+
+
+
+
+
+/* Inicia 5_soft_skills */
+.softSkills {
+    font-family: 'Urbanist', sans-serif;  
+    padding-block: 4rem;  
+}
+.softSkillsTitle {
+    font-weight: 600;
+    font-size: 1.5rem;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding-inline: 1.5rem;
+    margin-bottom: 1rem;
+    color: rgb(190, 190, 190);
+}
+.softSkillsCards {
+    display: flex;
+    gap: 1rem;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding-inline: 1.5rem;
+    flex-wrap: wrap;
+}
+.softSkillsCard {
+    padding: 1rem 1rem;
+    margin-bottom: 1rem;
+    
+}
+.softSkillsCardTitle {
+    font-weight: bold;
+    margin: 0;
+    
+}
+.skillsCardRed {
+    /* background-color: rgb(255, 35, 35);     */
+    background: linear-gradient(rgb(247, 50, 50),rgba(157, 0, 0, 0.926));
+    
+}
+.skillsCardBlack {
+    background: linear-gradient(rgb(35, 61, 62),rgb(10, 24, 25));
+    color: rgb(185, 185, 185);
+}
+/* Fin 5_soft_skills */
+
+
+
+
+
+
+
+/* Inicia 6_experience_summary */
+.experienceSummarySection {
+    color: white;
+    background-color: rgba(20, 38, 39, 0.926);
+    padding-bottom: 3rem;
+}
+.experienceSummary {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding-inline: 1.5rem;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: 
+    "experienceSummaryCard1 experienceSummaryCard2 experienceSummaryCard3 "
+    "experienceSummaryCard1 experienceSummaryCard4 experienceSummaryCard5"
+    ;
+    gap: 1rem;
+}
+.experienceSummaryCard {
+    /* background: linear-gradient(rgb(35, 61, 62),rgb(10, 24, 25)); */
+    font-family: 'Urbanist', sans-serif; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(10, 24, 25);
+}
+
+.experienceSummaryCard1 {
+    grid-area: experienceSummaryCard1;
+    background-color: transparent;
+}
+.experienceSummaryCard1Year {
+    color: red;
+    font-size: 6rem;
+    margin-bottom: 0;
+    font-weight: bold;
+}
+.experienceSummaryCard1Tx {
+    font-weight: bold;
+}
+
+
+.experienceSummaryCard2 {
+    grid-area: experienceSummaryCard2;    
+}
+.experienceSummaryCard3 {
+    grid-area: experienceSummaryCard3;    
+}
+.experienceSummaryCard4 {
+    grid-area: experienceSummaryCard4;
+}
+.experienceSummaryCard5 {
+    grid-area: experienceSummaryCard5;
+}
+
+.experienceSummaryCardsYear {
+    color: red;
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 0;
+    padding-top: 1rem;
+}
+.experienceSummaryCardsTx {
+    margin-bottom: 0;
+    text-align: center;
+    padding-bottom: 1rem;
+    padding-inline: 4rem;
+}
+/* fin 6_experience_summary */
+
+
+
+
+
+
+
+
+/* Inicia 7_experience */
+.experienceSection {
+    color: white;
+    background-color: rgba(20, 38, 39, 0.926);
+    
+}
+.experienceContainer {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding-inline: 1.5rem;
+    
+    display: flex;
+    align-items: center;
+    gap: 4rem;
+}
+
+.experienceContainerImage {
+    
+}
+
+:root {
+    --primary: #22D2A0;
+    --secondary: #192824;
+    --background: #192824;
+    --green: #1FC11B;
+    --yellow: #FFD913;
+    --orange: #FF9C55;
+    --red: #FF5555;
+  } 
+.experienceContainerImage img {
+    width: 100%;
+    cursor: pointer;
+    
+    border: 3px solid var(--primary);
+    
+    box-shadow: -10px -10px 0 -3px var(--background), -10px -10px var(--green),
+          -20px -20px 0 -3px var(--background), -20px -20px var(--yellow),
+          -30px -30px 0 -3px var(--background), -30px -30px var(--orange),
+          -40px -40px 0 -3px var(--background), -40px -40px var(--red);
+  }
+  .experienceContainerImage img:hover {
+    animation: shadow_wave 1s ease infinite;
+  }
+  
+  
+  @keyframes shadow_wave {
+    0% {
+      border: 3px solid var(--primary);
+      box-shadow: -10px -10px 0 -3px var(--background), -10px -10px var(--green),
+        -20px -20px 0 -3px var(--background), -20px -20px var(--yellow),
+        -30px -30px 0 -3px var(--background), -30px -30px var(--orange),
+        -40px -40px 0 -3px var(--background), -40px -40px var(--red);
+    }
+    20% {
+      border: 3px solid var(--red);
+      box-shadow: -10px -10px 0 -3px var(--background), -10px -10px var(--primary),
+        -20px -20px 0 -3px var(--background), -20px -20px var(--green),
+        -30px -30px 0 -3px var(--background), -30px -30px var(--yellow),
+        -40px -40px 0 -3px var(--background), -40px -40px var(--orange);
+    }
+    40% {
+      border: 3px solid var(--orange);
+      box-shadow: -10px -10px 0 -3px var(--background), -10px -10px var(--red),
+        -20px -20px 0 -3px var(--background), -20px -20px var(--primary),
+        -30px -30px 0 -3px var(--background), -30px -30px var(--green),
+        -40px -40px 0 -3px var(--background), -40px -40px var(--yellow);
+    }
+    60% {
+      border: 3px solid var(--yellow);
+      box-shadow: -10px -10px 0 -3px var(--background), -10px -10px var(--orange),
+        -20px -20px 0 -3px var(--background), -20px -20px var(--red),
+        -30px -30px 0 -3px var(--background), -30px -30px var(--primary),
+        -40px -40px 0 -3px var(--background), -40px -40px var(--green);
+    }
+    80% {
+      border: 3px solid var(--green);
+      box-shadow: -10px -10px 0 -3px var(--background), -10px -10px var(--yellow),
+        -20px -20px 0 -3px var(--background), -20px -20px var(--orange),
+        -30px -30px 0 -3px var(--background), -30px -30px var(--red),
+        -40px -40px 0 -3px var(--background), -40px -40px var(--primary);
+    }
+    100% {
+      border: 3px solid var(--primary);
+      box-shadow: -10px -10px 0 -3px var(--background), -10px -10px var(--green),
+        -20px -20px 0 -3px var(--background), -20px -20px var(--yellow),
+        -30px -30px 0 -3px var(--background), -30px -30px var(--orange),
+        -40px -40px 0 -3px var(--background), -40px -40px var(--red);
+    }
+    
+  }
+
+
+
+/* fin 7_experience */
+
+
+
+
+
+
+/* Inicia Imagen tecladoRaton */
+.tecladoRaton {
+    width: 100%;
+    margin-top: 0;
+    padding-top: 0;
+}
+/* Fin Imagen tecladoRaton */
+
+
+
+
+
+
 
 
 
@@ -53,8 +479,8 @@ body {
 
 /* Inicia intro */
     .intro {
-        padding-block: 5rem;
-        background-color: black;
+        padding-block: 3rem;
+        
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         grid-template-areas:
@@ -86,11 +512,7 @@ body {
 /* Fin intro */
 
 
-/* Inicia Imagen tecladoRaton */
-    .tecladoRaton {
-        width: 100%;
-    }
-/* Fin Imagen tecladoRaton */
+
 
 
 
